[package]
name = "vdp"
version = "0.1.0"
authors = ["d3sm0 <simone.totaro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray="0.13.1"

[lib]
name ="vdp"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.1"
features = ["extension-module"]
